--- a/frontend/src/i18n/locales/zh/userProcess.json
+++ b/frontend/src/i18n/locales/zh/userProcess.json
@@ -1,8 +1,19 @@
 {
   "tabs": {
     "processDefinitions": "流程定义",
-    "processInstances": "我的实例",
-    "userTasks": "我的任务"
+    "processInstances": "我的流程实例",
+    "userTasks": "我的任务",
+    "processHistory": "流程历史"
+  },
+  "switch": {
+    "handledByMe": "由我处理",
+    "startedByMe": "由我发起"
+  },
+  "processHistoryTable": {
+    "instanceId": "实例ID",
+    "startTime": "开始时间",
+    "endTime": "结束时间",
+    "businessKey": "业务键"
   },
   "processDefinitions": {
     "title": "流程定义",
@@ -25,7 +36,8 @@
       "processName": "流程名称",
       "startTime": "开始时间",
       "currentStage": "当前阶段",
-      "status": "状态"
+      "status": "状态",
+      "businessKey": "流程业务号"
     },
     "dialog": {
       "title": "实例 {{id}} 详情",
@@ -39,19 +51,10 @@
   "userTasks": {
     "title": "我的任务",
     "description": "查看并完成分配给您的任务",
-    "table": {
-      "taskTitle": "任务标题",
-      "processName": "流程名称",
-      "dueDate": "截止日期",
-      "priority": "优先级",
-      "actions": "操作"
-    },
-    "overdue": "已逾期",
-    "overdueTooltip": "此任务已超过截止日期",
-    "detailsTooltip": "查看详情",
-    "completeTooltip": "完成任务",
-    "declineTooltip": "拒绝任务",
+    "unassigned": "未分配",
     "dialog": {
+      "taskId": "任务ID",
+      "assignee": "负责人",
       "title": "任务详情：{{title}}",
       "processName": "流程名称",
       "dueDate": "截止日期",
@@ -60,6 +63,27 @@
       "cancelButton": "取消",
       "completeButton": "完成"
     },
+    "table": {
+      "taskTitle": "任务标题",
+      "processName": "流程名称",
+      "dueDate": "截止日期",
+      "priority": "优先级",
+      "actions": "操作",
+      "assignee": "负责人",
+      "businessKey": "流程业务号"
+    },
+    "overdue": "已逾期",
+    "errors": {
+      "fetchMetadataFailed": "无法获取流程实例元数据",
+      "fetchActivitiesFailed": "无法获取活动数据"
+    },
+    "processInstance": {
+      "title": "流程实例详情"
+    },
+    "overdueTooltip": "此任务已超过截止日期",
+    "detailsTooltip": "查看详情",
+    "completeTooltip": "完成任务",
+    "declineTooltip": "拒绝任务",
     "declineDialog": {
       "title": "拒绝任务：{{title}}",
       "description": "请提供拒绝此任务的原因",
